--- a/assets/style.css
+++ b/assets/style.css
@@ -127,7 +127,7 @@ i.fa.fa-angle-down {
 	background-size: 20px 30px !important;
 }
 .swiper-button-prev {
-	background-image: url(../assets/img/Caretleft.png) !important;
+	background-image: url(../assets/img/CaretLeft.png) !important;
 	background-size: 20px 30px !important;
 }
 
