--- a/assets/style.css
+++ b/assets/style.css
@@ -408,7 +408,7 @@ a.block__list i:hover{
 a.block__list p:hover{
 	color: #fff;
 }
-.blocks__indicator a:hover {
+.blocks__indicator:hover {
 	color: #fff;
 	background-color: #0F5EF7;
 }
