--- a/assets/style.css
+++ b/assets/style.css
@@ -252,119 +252,119 @@ i.fa.fa-angle-down {
 	color: #fff;
 }
 .block__tractor:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 
 .block__industry:hover{
-	background-color: #0F5EF7;
+	background-color: #FFD43B;
 	border-radius: 5px;
 }
 .block__industry:hover p{
 	color: #fff;
 }
 .block__industry:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 
 .block__building:hover{
-	background-color: #0F5EF7;
+	background-color: #7A15F7;
 	border-radius: 5px;
 }
 .block__building:hover p{
 	color: #fff;
 }
 .block__building:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__shopping:hover{
-	background-color: #0F5EF7;
+	background-color: #f01000;
 	border-radius: 5px;
 }
 .block__shopping:hover p{
 	color: #fff;
 }
 .block__shopping:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__shuttle:hover{
-	background-color: #0F5EF7;
+	background-color: #00BC8B;
 	border-radius: 5px;
 }
 .block__shuttle:hover p{
 	color: #fff;
 }
 .block__shuttle:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__tower:hover{
-	background-color: #0F5EF7;
+	background-color: #475F7B;
 	border-radius: 5px;
 }
 .block__tower:hover p{
 	color: #fff;
 }
 .block__tower:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__gears:hover{
-	background-color: #0F5EF7;
+	background-color: #FFD43B;
 	border-radius: 5px;
 }
 .block__gears:hover p{
 	color: #fff;
 }
 .block__gears:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__money:hover{
-	background-color: #0F5EF7;
+	background-color: #7A15F7;
 	border-radius: 5px;
 }
 .block__money:hover p{
 	color: #fff;
 }
 .block__money:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__graduation:hover{
-	background-color: #0F5EF7;
+	background-color: #f01000;
 	border-radius: 5px;
 }
 .block__graduation:hover p{
 	color: #fff;
 }
 .block__graduation:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__heart:hover{
-	background-color: #0F5EF7;
+	background-color: #00BC8B;
 	border-radius: 5px;
 }
 .block__heart:hover p{
 	color: #fff;
 }
 .block__heart:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__group:hover{
-	background-color: #0F5EF7;
+	background-color: #475F7B;
 	border-radius: 5px;
 }
 .block__group:hover p{
 	color: #fff;
 }
 .block__group:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__card:hover{
@@ -375,40 +375,40 @@ i.fa.fa-angle-down {
 	color: #fff;
 }
 .block__card:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__buildings:hover{
-	background-color: #0F5EF7;
+	background-color: #FFD43B;
 	border-radius: 5px;
 }
 .block__buildings:hover p{
 	color: #fff;
 }
 .block__buildings:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__briefcase:hover{
-	background-color: #0F5EF7;
+	background-color: #7A15F7;
 	border-radius: 5px;
 }
 .block__briefcase:hover p{
 	color: #fff;
 }
 .block__briefcase:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .block__list:hover{
-	background-color: #0F5EF7;
+	background-color: #475F7B;
 	border-radius: 5px;
 }
 .block__list:hover p{
 	color: #fff;
 }
 .block__list:hover i{
-	color: #fff ;
+	color: #fff !important;
 }
 
 .blocks__indicator i:hover {
@@ -424,7 +424,7 @@ i.fa.fa-angle-down {
 	text-decoration: none;
 }
 .blocks__indicator {
-	padding: 14px 14px;
+	padding: 30px 14px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	text-align: center;
