--- a/assets/style.css
+++ b/assets/style.css
@@ -502,6 +502,7 @@ i.fa.fa-angle-down {
 	padding: 44px 44px;
 	background-color: #f7f7f7;
 	border-radius: 24px;
+	margin-top: 60px;
 }
 .subtitle__dp p {
 	line-height: 0px;
