--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,76 @@ body {
 	align-items: center;
 }
 
+.nav {
+    display: block;
+   /* text-transform: uppercase;*/
+    margin: 0; 
+    padding: 0;
+}
+
+.nav li {
+    display: inline-block;
+    list-style: none;
+}
+
+.nav .button-dropdown {
+    position: relative;
+}
+
+.nav li a {
+    color: #333;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: right;
+}
+
+.nav li a span {
+    display: inline-block;
+    margin-left: 5px;
+    font-size: 10px;
+    color: #999;
+}
+
+
+
+
+.nav li a:hover span, .nav li a.dropdown-toggle.active span {
+    color: #fff;
+}
+
+.nav li .dropdown-menu {
+    display: none;
+    position: absolute;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    margin-top: 3px;
+    text-align: left;
+    border: none;
+    left: -6px;
+}
+img.flag__en {
+	width: 14% !important;
+}
+.dropdown-menu img {
+	width: 20%;
+
+}
+.nav li .dropdown-menu.active {
+    display: block;
+}
+
+.nav li .dropdown-menu a {
+    width: 150px;
+}
+.button-dropdown img {
+	width: 20%;
+	padding: 0 0 0 3px;
+}
+.dropdown-toggle::after {
+	display: none !important;
+}
 
 
 
