--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,9 @@ img.flag__en {
 	display: none !important;
 }
 
-
+.indicator__image:hover svg {
+	filter: brightness(0) invert(1);
+}
 
 .sl-nav {
 	display: inline;
