--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,7 @@ img.flag__en {
 	display: none !important;
 }
 
-.indicator__image:hover svg {
+a.block__list:hover svg {
 	filter: brightness(0) invert(1);
 }
 
